[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/platformer/the_sign.png" type="Texture" id=1]
[ext_resource path="res://scenes_two/Sign.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Comfortaa/Comfortaa-VariableFont_wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI_Scenes/ObjectLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ui/sign_close.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 46
font_data = ExtResource( 3 )

[node name="Sign" type="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1753.0
margin_bottom = -1007.0
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )

[node name="LargeSign" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
margin_left = -539.0
margin_top = -275.0
margin_right = -35.0
margin_bottom = -21.0
texture = ExtResource( 5 )

[node name="SignText" type="RichTextLabel" parent="LargeSign"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -91.0
margin_right = 209.0
margin_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "My voice can be a warning."
fit_content_height = true

[node name="ReadSign" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="ObjectInfo" parent="." instance=ExtResource( 4 )]
unique_name_in_owner = true
margin_left = -20.0
margin_top = -71.0
margin_right = 20.0
margin_bottom = -31.0
